--- a/package.json
+++ b/package.json
@@ -12,31 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/pwa": "^0.6.8",
-    "@angular/router": "^6.0.3",
-    "@angular/service-worker": "^6.0.3",
+    "@angular/router": "^8.2.14",
+    "@angular/service-worker": "^8.2.14",
     "@schematics/angular": "^7.0.7",
     "ajv-keywords": "^3.4.1",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
+    "request": "^2.88.0",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "webpack-dev-server": "^3.9.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.20",
     "@angular/cli": "^8.3.20",
     "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^6.0.3",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -54,6 +56,6 @@
     "protractor": "^6.0.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~3.5.3"
   }
 }
